2014-12-03  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/inttypes.h: Only enable the 8-bit scanning macros
	if _WANT_IO_C99_FORMATS is defined by configuration.  Add comment
	on why.

2014-11-28  Matthew Fortune  <matthew.fortune@imgtec.com>

	* libc/include/machine/setjmp.h [__mips__]: Remove __mips_fpr == 64
	from the 64-bit _JBTYPE definition.
	* libc/machine/mips/setjmp.S: Re-work the o32 FP64 support to match
	the now one-and-only supported o32 FP64 ABI extension.  Also
	support o32 FPXX.

2014-11-26  Hale Wang  <hale.wang@arm.com>

	* libc/machine/arm/strcmp-armv6m.S: New file.
	* libc/machine/arm/strcmp.S: Add new wrapper.
	* libc/machine/arm/Makefile.am: Add dependencies.
	* libc/machine/arm/Makefile.in: Regenerated.

2014-11-25  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/_default_fcntl.h: Move all Cygwin-specific open
	flags from Cygwin's fcntl.h here.  Remove check for WIN32.  Remove
	Windows-specific macros.

2014-11-23  Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/sys/resource.h: Add prototype for getrusage()
	to <sys/resource.h>

2014-11-21  Nick Clifton  <nickc@redhat.com>

	PR target/63901
	* configure.host (msp430): Add -mhwmult=none to newlib_cflags.

2014-11-20  Peter A. Bigot  <pab@pabigot.com>

	* libc/stdio/nano-vfprintf_i.c (_printf_i): Use LONGINT when void* is
	larger than an int.

2014-11-20  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/sys/rtems/sys/syslimits.h (NGROUPS_MAX): Adjust value so
	that NGROUPS is even.

2014-11-12  Jon Beniston  <jon@beniston.com>

	* libc/stdlib/strtod.c (sulp): Cast to int32_t to avoid overflow.
	* libc/time/gmtime_r.c (DAYS_PER_*_YEARS): Convert to long constants
	to avoid overflow.

2014-11-10  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/aarch64/strcpy.S: New file.
	* libc/machine/aarch64/strcpy-stub.S: New file.
	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Add new files.
	* libc/machine/aarch64/Makefile.in: Regenerate.
